# app_structure

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Package.swift  WORKSPACE.bazel
extensions/buildtools/: BUILD.bazel  extension.bzl  repository.bzl
ios/applications/example_application/: BUILD.bazel  Info.plist
ios/applications/example_application/sources/: ApplicationDelegate.swift  BUILD.bazel  SceneDelegate.swift
ios/feature_interfaces/delta_feature_interface/: BUILD.bazel
ios/feature_interfaces/epsilon_feature_interface/: BUILD.bazel
ios/feature_interfaces/example_sign_in_feature_interface/: BUILD.bazel  ExampleSignInCompleter.swift
ios/features/delta_feature/: BUILD.bazel
ios/features/epsilon_feature/: BUILD.bazel
ios/features/example_sign_in_feature/: BUILD.bazel  ExampleSignInFeatureBuilder.swift  ExampleSignInViewController.swift
ios/foundations/application_foundation/: ApplicationLifeCycleListener.swift  ApplicationScope.swift  BUILD.bazel  BaseApplicationDelegate.swift  BaseSceneDelegate.swift  RootScope.swift  RootScopeBuilder.swift  RootViewControllerBuilder.swift  SceneLifeCycleListener.swift  SceneScope.swift  SceneScopeBuilder.swift  Window.swift
ios/foundations/dependency_foundation/: BUILD.bazel  DependencyContainer.swift  DependencyProvider.swift
ios/foundations/route_foundation/: BUILD.bazel  Route.swift  RouteHandler.swift
ios/foundations/swift_foundation/: BUILD.bazel  WeakWrapper.swift
ios/scopes/example_application_scope/: BUILD.bazel  ExampleApplicationScope+Builders.swift  ExampleApplicationScope+Completers.swift  ExampleApplicationScope+Providers.swift  ExampleApplicationScope+RootScopeBuilderProvider.swift  ExampleApplicationScope+SceneScopeBuilderProvider.swift  ExampleApplicationScope.swift  ExampleApplicationStateScope.swift
ios/scopes/example_logged_out_root_scope/: BUILD.bazel  ExampleLoggedOutRootScope+Builders.swift  ExampleLoggedOutRootScope+PropagatedProviders.swift  ExampleLoggedOutRootScope+RootScope.swift  ExampleLoggedOutRootScope.swift  ExampleLoggedOutRootScopeBuilder.swift
ios/scopes/example_scene_scope/: BUILD.bazel  ExampleSceneScope+Providers.swift  ExampleSceneScope.swift  ExampleSceneScopeBuilder.swift
ios/scopes/example_signed_out_root_scope/: BUILD.bazel  ExampleSignedOutRootScope+Builders.swift  ExampleSignedOutRootScope+PropagatedProviders.swift  ExampleSignedOutRootScope+RootScope.swift  ExampleSignedOutRootScope.swift  ExampleSignedOutRootScopeBuilder.swift
ios/scopes/example_signed_out_state_scope/: BUILD.bazel  ExampleSignedOutStateScope+PropagatedProviders.swift  ExampleSignedOutStateScope+RootScopeBuilder.swift  ExampleSignedOutStateScope.swift  ExampleSignedOutStateScopeScopeBuilder.swift
ios/service_interfaces/alpha_service_interface/: BUILD.bazel
ios/service_interfaces/application_life_cycle_service_interface/: ApplicationLifeCyclePlugin.swift  ApplicationLifeCycleService.swift  BUILD.bazel
ios/service_interfaces/bar_service_interface/: BarService.swift
ios/service_interfaces/beta_service_interface/: BUILD.bazel  BetaService.swift
ios/service_interfaces/example_authentication_service_interface/: BUILD.bazel  ExampleAuthenticationService.swift  Session.swift
ios/service_interfaces/foo_service_interface/: FooService.swift
ios/service_interfaces/gamma_service_interface/: BUILD.bazel  GammaService.swift
ios/service_interfaces/route_service_interface/: BUILD.bazel  MutableRouteService.swift  RouteService.swift
ios/service_interfaces/scene_life_cycle_service_interface/: BUILD.bazel  SceneLifeCyclePlugin.swift  SceneLifeCycleService.swift  SharedSceneLifeCycleService.swift  UIScene.ActivationState+Extensions.swift
ios/service_interfaces/scene_route_service_interface/: BUILD.bazel  SceneRouteService.swift
ios/services/alpha_service/: BUILD.bazel
ios/services/alpha_service_implementation/: AlphaServiceImplementation.swift  BUILD.bazel
ios/services/application_life_cycle_service/: ApplicationLifeCycleServiceImplementation.swift  BUILD.bazel
ios/services/application_life_cycle_service_implementation/: BUILD.bazel
ios/services/beta_service/: BUILD.bazel
ios/services/beta_service_implementation/: BUILD.bazel  BetaServiceImplementation.swift
ios/services/example_authentication_service/: BUILD.bazel
ios/services/example_authentication_service_implementation/: BUILD.bazel  ExampleAuthenticationServiceImplementation.swift
ios/services/gamma_service_implementation/: BUILD.bazel  GammaServiceImplementation.swift
ios/services/route_service/: BUILD.bazel
ios/services/route_service_implementation/: RouteServiceImplementation.swift
ios/services/scene_life_cycle_service_implementation/: BUILD.bazel  SceneLifeCycleServiceImplementation.swift  SharedSceneLifeCycleServiceImplementation.swift
ios/services/scene_route_service_implementation/: BUILD.bazel  SceneRouteServiceImplementation.swift
