"""
Bazel Modules
"""

# module

module(
    name = "app_structure",
    version = "0.0.0",
)

# bazel_skylib

bazel_dep(name = "bazel_skylib", version = "1.4.2")

# bazel_skylib_gazelle_plugin

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.2")

# cgrindel_bazel_starlib

bazel_dep(name = "cgrindel_bazel_starlib", version = "0.18.0")

# gazelle

bazel_dep(name = "gazelle", version = "0.33.0", repo_name = "bazel_gazelle")

# rules_swift

bazel_dep(name = "rules_swift", version = "1.12.0", repo_name = "build_bazel_rules_swift")

# TODO: When a new version is cut which includes this commit, remove override.
git_override(
    module_name = "rules_swift",
    commit = "5b48d78cf1b67cc18a1bf3aae1c1152e5fac9937",
    remote = "https://github.com/bazelbuild/rules_swift",
)

# rules_swift_package_manager

bazel_dep(name = "rules_swift_package_manager", version = "0.15.0")

# apple_support

bazel_dep(name = "apple_support", version = "1.10.1")

apple_cc_configure_extension = use_extension(
    "@apple_support//crosstool:setup.bzl",
    "apple_cc_configure_extension",
    dev_dependency = True,
)
use_repo(
    apple_cc_configure_extension,
    "local_config_apple_cc",
)

# rules_apple

bazel_dep(name = "rules_apple", version = "3.0.0", repo_name = "build_bazel_rules_apple")

# rules_xcodeproj

bazel_dep(name = "rules_xcodeproj", version = "1.12.1")