load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "extension",
    srcs = ["extension.bzl"],
    visibility = ["//visibility:public"],
    deps = [":repository"],
)

bzl_library(
    name = "repository",
    srcs = ["repository.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/build_defs/repo:git.bzl"],
)
