load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "example_application_scope",
    srcs = [
        "ExampleApplicationScope.swift",
        "ExampleApplicationScope+Builders.swift",
        "ExampleApplicationScope+Completers.swift",
        "ExampleApplicationScope+Providers.swift",
        "ExampleApplicationScope+RootScopeBuilderProvider.swift",
        "ExampleApplicationScope+SceneScopeBuilderProvider.swift",
        "ExampleApplicationStateScope.swift",
    ],
    module_name = "ExampleApplicationScope",
    visibility = ["//visibility:public"],
    deps = [
        "//ios/feature_interfaces/example_sign_in_feature_interface",
        "//ios/foundations/application_foundation",
        "//ios/foundations/dependency_foundation",
        "//ios/scopes/example_scene_scope",
        "//ios/scopes/example_signed_out_state_scope",
        "//ios/service_interfaces/application_life_cycle_service_interface",
        "//ios/service_interfaces/example_authentication_service_interface",
        "//ios/services/application_life_cycle_service_implementation",
        "//ios/services/example_authentication_service_implementation",
    ],
)
