load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "example_signed_out_root_scope",
    srcs = [
        "ExampleSignedOutRootScope.swift",
        "ExampleSignedOutRootScope+Builders.swift",
        "ExampleSignedOutRootScope+PropagatedProviders.swift",
        "ExampleSignedOutRootScope+RootScope.swift",
        "ExampleSignedOutRootScopeBuilder.swift",
    ],
    module_name = "ExampleSignedOutRootScope",
    visibility = ["//visibility:public"],
    deps = [
        "//ios/feature_interfaces/example_sign_in_feature_interface",
        "//ios/features/example_sign_in_feature",
        "//ios/foundations/application_foundation",
        "//ios/foundations/dependency_foundation",
        "//ios/service_interfaces/example_authentication_service_interface",
    ],
)
