load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "example_logged_out_state_scope",
    srcs = [
        "ExampleSignedOutStateScope.swift",
        "ExampleSignedOutStateScope+PropagatedProviders.swift",
        "ExampleSignedOutStateScope+RootScopeBuilder.swift",
        "ExampleSignedOutStateScopeBuilder.swift",
    ],
    module_name = "ExampleSignedOutStateScope",
    visibility = ["//visibility:public"],
    deps = [
        "//ios/foundations/application_foundation",
        "//ios/foundations/dependency_foundation",
    ],
)
