load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "application_life_cycle_service_interface",
    srcs = [
        "ApplicationLifeCyclePlugin.swift",
        "ApplicationLifeCycleService.swift",
    ],
    module_name = "ApplicationLifeCycleServiceInterface",
    visibility = ["//visibility:public"],
    deps = ["//ios/foundations/application_foundation"],
)
