load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "scene_life_cycle_service_interface",
    srcs = [
        "SceneLifeCyclePlugin.swift",
        "SceneLifeCycleService.swift",
        "SharedSceneLifeCycleService.swift",
        "UIScene.ActivationState+Extensions.swift",
    ],
    module_name = "SceneLifeCycleServiceInterface",
    visibility = ["//visibility:public"],
    deps = ["//ios/foundations/application_foundation"],
)
