load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "scene_route_service_interface",
    srcs = ["SceneRouteService.swift"],
    module_name = "SceneRouteServiceInterface",
    visibility = ["//visibility:public"],
    deps = ["//ios/service_interfaces/scene_life_cycle_service_interface"],
)
