load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "alpha_service_implementation",
    srcs = ["AlphaServiceImplementation.swift"],
    module_name = "AlphaServiceImplementation",
    visibility = ["//visibility:public"],
    deps = ["//ios/service_interfaces/alpha_service_interface"],
)
