load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "example_authentication_service_implementation",
    srcs = ["ExampleAuthenticationServiceImplementation.swift"],
    module_name = "ExampleAuthenticationServiceImplementation",
    visibility = ["//visibility:public"],
    deps = ["//ios/service_interfaces/example_authentication_service_interface"],
)
