load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "route_service_implementation",
    srcs = ["RouteServiceImplementation.swift"],
    module_name = "RouteServiceImplementation",
    visibility = ["//visibility:public"],
    deps = [
        "//ios/foundations/route_foundation",
        "//ios/service_interfaces/route_service_interface",
    ],
)
